--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>three.js</title>
-    <script src="js/camera.js" type="module"></script>
-    <!-- <script src="js/fbxLoader.js" type="module"></script> -->
-    <!-- <script src="js/skyboxTest copy.js" type="module"></script> -->
-    <!-- <script src="js/main.js" type="module"></script> -->
-    <script src="js/fasheqi.js" type="module"></script>
-    <!-- <script src="js/MeshLine.js" type="module"></script> -->
-    <!-- <script src="js/LineAnimation.js" type="module"></script> -->
     <style>
         body {
             margin: 0;
@@ -16,38 +12,14 @@
         }
     </style>
 </head>
-<script type="module">
-    import {ParticleManager} from './js/particle v2.0-rain.js';
-    import * as THREE from './libs/threejs/build/three.module.js';
-
- function init(){
-    THREE.Cache.enabled = true;
-    const particleConfig  = new THREE.FileLoader();  
-    particleConfig.load("./particleSystemDatas.json",
-    // onLoad回调
-	function ( data ) {
-		// output the text to the console
-		console.log( data )
-	},
-
-	// onProgress回调
-	function ( xhr ) {
-		// console.log( (xhr.loaded / xhr.total * 100) + '% loaded' );
-	},
-
-	// onError回调
-	function ( err ) {
-		// console.error( 'An error happened' );
-	});  
-    const particle = new ParticleManager(particleConfig);
-                    particle.camera = this.camera;
-                    particle.Scene = this.Scene;
-                    particle.init(materialTextureMap[particleConfig.texturePath].cdnPath);
- }
-
- init();
-
-</script>
 <body>
+      <!-- <script src="./js/camera.js"></script> -->
+      <script src="./index.js"></script>
+      <!-- <script src="./js/fbxLoader.js"></script> -->
+      <!-- <script src="js/skyboxTest copy.js" type="module"></script> -->
+      <!-- <script src="js/main.js" type="module"></script> -->
+      <!-- <script src="js/fasheqi.js" type="module"></script> -->
+      <!-- <script src="js/MeshLine.js" type="module"></script> -->
+      <!-- <script src="js/LineAnimation.js" type="module"></script> -->
 </body>
 </html>
