文件存放目录调整

--- a/demo.html
+++ b/demo.html
@@ -14,7 +14,7 @@
 </head>
 <body>
       <!-- <script src="./js/camera.js"></script> -->
-      <script src="./index.js"></script>
+      <script src="./demo.js"></script>
       <!-- <script src="./js/fbxLoader.js"></script> -->
       <!-- <script src="js/skyboxTest copy.js" type="module"></script> -->
       <!-- <script src="js/main.js" type="module"></script> -->
