@yushu/three-effect@1.1.1：左右手坐标系转换规则修改；管道流光的depth属性修改

--- a/src/AE/particle v2.0-rain.html
+++ b/src/AE/particle v2.0-rain.html
@@ -94,7 +94,8 @@
         var q = new THREE.Quaternion( -PARTICLE.rotation.x, PARTICLE.rotation.y, PARTICLE.rotation.z, -PARTICLE.rotation.w );
         var v = new THREE.Euler();  
         v.setFromQuaternion( q );
-        v.y += Math.PI; // Y is 180 degrees off
+        if (this.rotation.y !== 0)
+            v.y += Math.PI; // Y is 180 degrees off
         v.z *= -1; // flip Z
         group.rotation.copy( v );
 
